Add angular-ui & angular-ui-tab

--- a/oasis_dashboard/oasisdash/static/oasisdash/oasis/endpoint/table/table.html
+++ b/oasis_dashboard/oasisdash/static/oasisdash/oasis/endpoint/table/table.html
@@ -27,6 +27,14 @@
       Table-column-headers:
       The headers for the table columns
     -->
+
+    <div class="row hz-container-actions">
+      <div class="col-xs-12 hz-container-action">
+          <a ng-href="project/endpoint/create" class="btn btn-default">Create</a>
+      </div>
+    </div>
+
+
     <tr>
         <th class="multi_select_column">
             <input type="checkbox" hz-select-all="table.endpoint">
