--- a/oasis_dashboard/oasisdash/static/oasisdash/oasis/function/edit/edit.html
+++ b/oasis_dashboard/oasisdash/static/oasisdash/oasis/function/edit/edit.html
@@ -1,10 +1,24 @@
-<div class="container">
-    <h1>Edit Function</h1>
+<div class="container" ng-controller="TabsController">
     <div class="col-xs-12">
-        <tabs data="tabData" type="tabs"></tabs>
+        <tabset>
+            <tab>
+                <tab-heading>
+                    <a ui-sref="edit.code">Code</a>
+                </tab-heading>
+            </tab>
+            <tab>
+                <tab-heading>
+                    <a ui-sref="edit.integration">Integration</a>
+                </tab-heading>
+            </tab>
+            <tab>
+                <tab-heading>
+                    <a ui-sref="edit.monitor">Monitor</a>
+                </tab-heading>
+            </tab>
+        </tabset>
     </div>
-
-    <div class="col-xs-12">
-        <ui-view autoscroll></ui-view>
+    <div ui-view>
+        <!--Here is the content-->
     </div>
 </div>
