--- a/oasis_dashboard/oasisdash/static/oasisdash/oasis/function/edit/edit.html
+++ b/oasis_dashboard/oasisdash/static/oasisdash/oasis/function/edit/edit.html
@@ -1,4 +1,4 @@
-<div class="container" ng-controller="TabsController">
+<div class="container">
     <div class="col-xs-12">
         <tabset>
             <tab>
