--- a/oasis_dashboard/oasisdash/static/oasisdash/oasis/function/edit/code/code.html
+++ b/oasis_dashboard/oasisdash/static/oasisdash/oasis/function/edit/code/code.html
@@ -2,6 +2,15 @@
     <div class="row">
         <div class="col-xs-12">
             <div class="form-group">
+                <label class="control-label" for="endpoint-name" translate>EndPoint Name</label>
+                <select name="endpoint-name" id="endpoint-name" ng-model="method"
+                        class="form-control" ng-options="mu as mu.label for mu in ctrl.function_method"
+                        ng-change="ctrl.selectMethod(method)">
+                    <option value="">Select EndPoint</option>
+                </select>
+            </div>
+
+            <div class="form-group">
                 <label class="control-label" for="function-name" translate>Function Name</label>
                 <input name="function-name" type="text" class="form-control" id="function-name"
                        ng-model="model.newFunctionSpec.name"
