--- a/oasis_dashboard/oasisdash/static/oasisdash/oasis/endpoint/create/method/setting/method.setting.html
+++ b/oasis_dashboard/oasisdash/static/oasisdash/oasis/endpoint/create/method/setting/method.setting.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" ng-controller="IntegrationSettingController">
     <h2>Setting {$ method $}</h2>
     <h3>Request Header</h3>
     <fieldset data-ng-repeat="header in integrationModel.newFunctionSpec[index].request">
