--- a/oasis_dashboard/oasisdash/static/oasisdash/oasis/endpoint/create/name/name.html
+++ b/oasis_dashboard/oasisdash/static/oasisdash/oasis/endpoint/create/name/name.html
@@ -6,21 +6,21 @@
             <div class="form-group">
                 <label class="control-label" for="endpoint-name" translate>Endpoint Name</label>
                 <input name="endpoint-name" type="text" class="form-control" id="endpoint-name"
-                       ng-model="model.newEndpointSpec.name"
-                       placeholder="{$ 'Description of the endpoint to create.'|translate $}">
+                       ng-model="integrationModel.endpoint.name"
+                       placeholder="{$ 'Name of the endpoint to create.'|translate $}">
             </div>
 
             <div class="form-group">
                 <label class="control-label" for="endpoint-description" translate>Endpoint Description</label>
                 <input name="endpoint-name" type="text" class="form-control" id="endpoint-description"
-                       ng-model="model.newEndpointSpec.name"
+                       ng-model="integrationModel.endpoint.desc"
                        placeholder="{$ 'Description of the endpoint to create.'|translate $}">
             </div>
 
             <div class="form-group">
                 <label class="control-label" for="endpoint-url" translate>Endpoint URL</label>
                 <input name="endpoint-url" type="text" class="form-control" id="endpoint-url"
-                       ng-model="model.newEndpointSpec.name"
+                       ng-model="integrationModel.endpoint.url"
                        placeholder="{$ 'URL of the endpoint to create.'|translate $}">
             </div>
 
