--- a/oasis_dashboard/oasisdash/static/oasisdash/oasis/endpoint/create/method/setting/method.setting.html
+++ b/oasis_dashboard/oasisdash/static/oasisdash/oasis/endpoint/create/method/setting/method.setting.html
@@ -1,89 +1,96 @@
 <div class="container" ng-controller="IntegrationSettingController">
     <h2>Setting {$ method $}</h2>
+
     <h3>Request Header</h3>
-    <fieldset data-ng-repeat="header in integrationModel.newFunctionSpec[index].request">
-        <div class="col-xs-4">
-            <div class="form-group">
-                <label class="control-label" for="header-key" translate>Header Key</label>
-                <input name="header-key" type="text" class="form-control" id="header-key"
-                       ng-model="header.name"
-                       placeholder="{$ 'Key of the header to create.'|translate $}">
-            </div>
-        </div>
 
-        <div class="col-xs-4">
-            <div class="form-group">
-                <label class="control-label" for="header-value" translate>Header Value</label>
-                <input name="header-value" type="text" class="form-control" id="header-value"
-                       ng-model="header.value"
-                       placeholder="{$ 'Value of the header to create.'|translate $}">
-            </div>
-        </div>
-        <div class="col-xs-4">
-            <div class="form-group">
-                <button type="button" class="btn btn-default full-config-hide" ng-show="$last"
-                        ng-click="removeHeader()">
-                    Delete
-                </button>
-            </div>
-        </div>
+    <div class="modal-body">
+        <div class="container col-md-12">
 
-    </fieldset>
+            <fieldset data-ng-repeat="header in integrationModel.newFunctionSpec[index].request">
+                <div class="col-xs-4">
+                    <div class="form-group">
+                        <label class="control-label" for="header-key" translate>Header Key</label>
+                        <input name="header-key" type="text" class="form-control" id="header-key"
+                               ng-model="header.name"
+                               placeholder="{$ 'Key of the header to create.'|translate $}">
+                    </div>
+                </div>
 
-    <button class="btn btn-default" ng-click="addHeader()">
-        Add
-    </button>
+                <div class="col-xs-4">
+                    <div class="form-group">
+                        <label class="control-label" for="header-value" translate>Header Value</label>
+                        <input name="header-value" type="text" class="form-control" id="header-value"
+                               ng-model="header.value"
+                               placeholder="{$ 'Value of the header to create.'|translate $}">
+                    </div>
+                </div>
+                <div class="col-xs-4">
+                    <div class="form-group">
+                        <button type="button" class="btn btn-default full-config-hide" ng-show="$last"
+                                ng-click="removeHeader()">
+                            Delete
+                        </button>
+                    </div>
+                </div>
 
-    <h3>Response Code</h3>
-    <fieldset data-ng-repeat="code in integrationModel.newFunctionSpec[index].resCodes">
-        <div class="col-xs-4">
-            <div class="form-group">
-                <label class="control-label" for="resCode" translate>Response Code</label>
-                <input name="resCode" type="text" class="form-control" id="resCode"
-                       ng-model="code.code"
-                       placeholder="{$ 'code of the response to create.'|translate $}">
-            </div>
+            </fieldset>
+
+            <button class="btn btn-default" ng-click="addHeader()">
+                Add
+            </button>
+
+            <h3>Response Code</h3>
+            <fieldset data-ng-repeat="code in integrationModel.newFunctionSpec[index].resCodes">
+                <div class="col-xs-4">
+                    <div class="form-group">
+                        <label class="control-label" for="resCode" translate>Response Code</label>
+                        <input name="resCode" type="text" class="form-control" id="resCode"
+                               ng-model="code.code"
+                               placeholder="{$ 'code of the response to create.'|translate $}">
+                    </div>
+                </div>
+                <div class="col-xs-4">
+                    <div class="form-group">
+                        <button type="button" class="btn btn-default full-config-hide" ng-show="$last"
+                                ng-click="removeResCode()">
+                            Delete
+                        </button>
+                    </div>
+                </div>
+            </fieldset>
+            <button class="btn btn-default" ng-click="addResCode()">
+                Add
+            </button>
+
+            <h3>Response Setting</h3>
+            <fieldset data-ng-repeat="response in integrationModel.newFunctionSpec[index].responses">
+                <div class="col-xs-4">
+                    <div class="form-group">
+                        <select name="select-code" id="select-code" ng-model="response.id"
+                                class="form-control"
+                                ng-options="code as code.code for code in integrationModel.newFunctionSpec[index].resCodes">
+                            <option value="">Select Code</option>
+                        </select>
+                    </div>
+
+                    <div class="form-group">
+                        <input name="header-value" type="text" class="form-control" id="res-regex"
+                               ng-model="response.urlRegex"
+                               placeholder="{$ 'URL regex of response to create.'|translate $}">
+                    </div>
+                </div>
+                <div class="col-xs-3">
+                    <div class="form-group" style='display:table-cell;vertical-align:middle'>
+                        <button type="button" class="btn btn-default full-config-hide" ng-show="$last"
+                                ng-click="removeResponse()">
+                            Delete
+                        </button>
+                    </div>
+                </div>
+            </fieldset>
+            <button class="btn btn-default" ng-click="addResponse()">
+                Add
+            </button>
         </div>
-        <div class="col-xs-4">
-            <div class="form-group">
-                <button type="button" class="btn btn-default full-config-hide" ng-show="$last"
-                        ng-click="removeResCode()">
-                    Delete
-                </button>
-            </div>
-        </div>
-    </fieldset>
-    <button class="btn btn-default" ng-click="addResCode()">
-        Add
-    </button>
-
-    <h3>Response Setting</h3>
-    <fieldset data-ng-repeat="response in integrationModel.newFunctionSpec[index].responses">
-        <div class="col-xs-4">
-            <div class="form-group">
-                <select name="select-code" id="select-code" ng-model="response.id"
-                        class="form-control" ng-options="code as code.code for code in integrationModel.newFunctionSpec[index].resCodes">
-                    <option value="">Select Code</option>
-                </select>
-            </div>
-
-            <div class="form-group">
-                <input name="header-value" type="text" class="form-control" id="res-regex"
-                       ng-model="response.urlRegex"
-                       placeholder="{$ 'URL regex of response to create.'|translate $}">
-            </div>
-        </div>
-        <div class="col-xs-3">
-            <div class="form-group" style='display:table-cell;vertical-align:middle'>
-                <button type="button" class="btn btn-default full-config-hide" ng-show="$last"
-                        ng-click="removeResponse()">
-                    Delete
-                </button>
-            </div>
-        </div>
-    </fieldset>
-    <button class="btn btn-default" ng-click="addResponse()">
-        Add
-    </button>
-
+    </div>
 </div>
