--- a/oasis_dashboard/oasisdash/static/oasisdash/oasis/function/table/table.html
+++ b/oasis_dashboard/oasisdash/static/oasisdash/oasis/function/table/table.html
@@ -78,7 +78,7 @@
     </span>
         </td>
 
-        <td class="rsp-p1"><a ng-href="project/function/{$ b.id $}">{$ b.name|noName $}</a></td>
+        <td class="rsp-p1"><a ui-sref="edit.code({functionId: '{$b.id$}'})">{$ b.name|noName $}</a></td>
         <td class="rsp-p1">{$ b.id $}</td>
         <td class="rsp-p2">{$ b.desc $}</td>
         <td class="rsp-p1">{$ b.status $}</td>
