--- a/oasis_dashboard/oasisdash/static/oasisdash/oasis/endpoint/table/table.html
+++ b/oasis_dashboard/oasisdash/static/oasisdash/oasis/endpoint/table/table.html
@@ -80,7 +80,7 @@
         <td class="rsp-p1"><a href='' ng-click="table.showDetailModal(b)">{$ b.name|noName $}</a></td>
         <td class="rsp-p1">{$ b.id $}</td>
         <td class="rsp-p2">{$ b.desc $}</td>
-        <td class="rsp-p1">{$ b.status $}</td>
+        <td class="rsp-p1"> running </td>
 
         <td class="actions_column">
             <!--
