--- a/oasis_dashboard/oasisdash/static/oasisdash/oasis/endpoint/create/method/setting/method.setting.html
+++ b/oasis_dashboard/oasisdash/static/oasisdash/oasis/endpoint/create/method/setting/method.setting.html
@@ -13,7 +13,7 @@
         </div>
 
         <div class="row">
-            <fieldset data-ng-repeat="header in integrationModel.newFunctionSpec[index].request">
+            <fieldset data-ng-repeat="header in headers">
                 <div class="col-md-3">
                     <div>
                         <label></label>
@@ -53,12 +53,6 @@
                 </button>
 
             </div>
-            <div class="col-md-4">
-                <button class="btn btn-default" ng-click="createHeader()">
-                    Create
-                </button>
-
-            </div>
         </div>
 
         <h3>Response Code</h3>
@@ -69,7 +63,7 @@
 
         <div class="row">
 
-            <fieldset data-ng-repeat="code in integrationModel.newFunctionSpec[index].resCodes">
+            <fieldset data-ng-repeat="code in resCodes">
                 <div class="col-md-3">
                     <div><label></label></div>
                     <div>
@@ -97,29 +91,22 @@
                 </button>
 
             </div>
-            <div class="col-md-4">
-                <button class="btn btn-default" ng-click="createResCode()">
-                    Create
-                </button>
-
-            </div>
         </div>
 
         <h3>Response Setting</h3>
 
-        <fieldset data-ng-repeat="response in integrationModel.newFunctionSpec[index].responses">
+        <fieldset data-ng-repeat="response in responseMessages">
             <div class="col-md-3">
                 <div class="form-group">
-                    <select name="select-code" id="select-code" ng-model="response.id"
-                            class="form-control"
-                            ng-options="code as code.code for code in integrationModel.newFunctionSpec[index].resCodes">
-                        <option value="">Select Code</option>
+                    <select name="select-code" id="select-code" ng-model="response.code"
+                            class="form-control" ng-change="selectCode(response)"
+                            ng-options="code as code.status_code for code in resCodes">
                     </select>
                 </div>
 
                 <div class="form-group">
                     <input name="header-value" type="text" class="form-control" id="res-regex"
-                           ng-model="response.urlRegex"
+                           ng-model="response.message"
                            placeholder="{$ 'URL regex of response to create.'|translate $}">
                 </div>
             </div>
@@ -135,14 +122,8 @@
 
         <div class="row">
             <div class="col-md-4">
-                <button class="btn btn-default" ng-click="addResponse()">
+                <button class="btn btn-default" ng-click="addResponseMesage()">
                     Add
-                </button>
-
-            </div>
-            <div class="col-md-4">
-                <button class="btn btn-default" ng-click="createResponse()">
-                    Create
                 </button>
 
             </div>
