Update Function, NodePool, NodePool Policy DB API

--- a/oasis_dashboard/oasisdash/static/oasisdash/oasis/function/edit/code/code.html
+++ b/oasis_dashboard/oasisdash/static/oasisdash/oasis/function/edit/code/code.html
@@ -50,8 +50,8 @@
 
             <div class="form-group">
                 <label class="control-label" for="endpoint-name" translate>EndPoint Name</label>
-                <select name="endpoint-name" id="endpoint-name" ng-model="model.newFunctionSpec.endpoint"
-                        class="form-control" ng-options="mu as mu.label for mu in ctrl.endpoints">
+                <select name="endpoint-name" id="endpoint-name" ng-model="model.newFunctionSpec.endpoint_id"
+                        class="form-control" ng-options="mu.unit as mu.label for mu in ctrl.endpoints">
                     <option value="">Select EndPoint</option>
                 </select>
             </div>
