--- a/oasis_dashboard/oasisdash/static/oasisdash/oasis/function/edit/code/code.html
+++ b/oasis_dashboard/oasisdash/static/oasisdash/oasis/function/edit/code/code.html
@@ -42,7 +42,7 @@
         <div class="col-xs-12">
             <div class="form-group">
                 <label class="control-label" for="nodepool-name" translate>NodePool Name</label>
-                <select name="nodepool-name" id="nodepool-name" ng-model="model.newFunctionSpec.nodepool"
+                <select name="nodepool-name" id="nodepool-name" ng-model="model.newFunctionSpec.nodepool_id"
                         class="form-control" ng-options="mu as mu.label for mu in ctrl.nodepools">
                     <option value="">Select NodePool</option>
                 </select>
