--- a/oasis_dashboard/oasisdash/static/oasisdash/oasis/function/table/table.html
+++ b/oasis_dashboard/oasisdash/static/oasisdash/oasis/function/table/table.html
@@ -49,23 +49,9 @@
 
     <tr ng-repeat-start="b in table.function track by b.id">
 
-        <!--<td class="multi_select_column">-->
-            <!--<input type="checkbox"-->
-                   <!--ng-model="tCtrl.selections[b.id].checked"-->
-                   <!--hz-select="b">-->
-        <!--</td>-->
-
-        <!--<td class="expander">-->
-            <!--<span class="fa fa-chevron-right"-->
-                  <!--hz-expand-detail-->
-                  <!--duration="200">-->
-            <!--</span>-->
-        <!--</td>-->
-
-        <!--<td class="rsp-p1"><a ui-sref="edit.code({functionId: '{$b.id$}'})">{$ b.name|noName $}</a></td>-->
         <td class="rsp-p1"><a href="" ng-click="showFunction(b.id)">{$ b.name|noName $}</a></td>
         <td class="rsp-p2">{$ b.desc $}</td>
-        <td class="rsp-p1">running</td>
+        <td class="rsp-p1">{$ b.status $}</td>
         <td class="rsp-p1">{$ b.created_at $}</td>
         <td class="actions_column">
             <!--
@@ -75,47 +61,10 @@
             <actions allowed="table.functionResource.itemActions" type="row" item="b"></actions>
         </td>
     </tr>
+
     <tr ng-repeat-end class="detail-row">
-        <!--
-          Detail-row:
-          Contains detailed information on this item.
-          Can be toggled using the chevron button.
-          Ensure colspan is greater or equal to number of column-headers.
-        -->
-        <td class="detail" colspan="100">
-            <!--
-              The responsive columns that disappear typically should reappear here
-              with the same responsive priority that they disappear.
-              E.g. table header with rsp-p2 should be here with rsp-alt-p2
-            -->
-            <div class="row">
-      <span class="rsp-alt-p2">
-        <dl class="col-xs-5">
-            <dt translate>ID</dt>
-            <dd>{$ b.id $}</dd>
-        </dl>
-        <!--<dl class="col-xs-3">-->
-          <!--<dt translate>Master Count</dt>-->
-          <!--<dd>{$ b.master_count $}</dd>-->
-        <!--</dl>-->
-        <!--<dl class="col-xs-3">-->
-          <!--<dt translate>Node Count</dt>-->
-          <!--<dd>{$ b.node_count $}</dd>-->
-        <!--</dl>-->
-      </span>
-            </div>
-            <div class="row">
-                <dl class="col-xs-5">
-                    <dt translate>Baymodel</dt>
-                    <dd><a ng-href="project/function/{$ b.baymodel_id $}">{$ b.baymodel_id $}</a></dd>
-                </dl>
-                <!--<dl class="col-xs-3">-->
-                <!--<dt translate>Node Addresses</dt>-->
-                <!--<dd ng-repeat="addr in b.node_addresses">{$ addr $}</dd>-->
-                <!--</dl>-->
-            </div>
-        </td>
     </tr>
+
     <tr hz-no-items items="table.function"></tr>
     </tbody>
     <!--
