--- a/oasis_dashboard/oasisdash/static/oasisdash/oasis/function/edit/code/code.html
+++ b/oasis_dashboard/oasisdash/static/oasisdash/oasis/function/edit/code/code.html
@@ -1,49 +1,10 @@
-<!--<div class="container" ng-controller="CreateFunctionInputController as ctrl">-->
-<!--<div class="row">-->
-<!--<div class="col-xs-12">-->
-<!--<div class="form-group">-->
-<!--<label class="control-label" for="endpoint-name" translate>EndPoint Name</label>-->
-<!--<select name="endpoint-name" id="endpoint-name" ng-model="model.newFunctionSpec.endpoint"-->
-<!--class="form-control" ng-options="mu as mu.unit for mu in ctrl.endpoints">-->
-<!--<option value="">Select EndPoint</option>-->
-<!--</select>-->
-<!--</div>-->
-
-<!--<div class="form-group">-->
-<!--<label class="control-label" for="function-name" translate>Function Name</label>-->
-<!--<input name="function-name" type="text" class="form-control" id="function-name"-->
-<!--ng-model="model.newFunctionSpec.name"-->
-<!--placeholder="{$ 'Name of the function to create.'|translate $}">-->
-<!--</div>-->
-
-<!--<div class="form-group">-->
-<!--<label class="control-label" for="function-description" translate>Function Description</label>-->
-<!--<input name="bay-name" type="text" class="form-control" id="function-description" ng-model="model.newFuncSpec.desc"-->
-<!--placeholder="{$ 'Description of the function to create.'|translate $}">-->
-<!--</div>-->
-
-<!--<div class="form-group">-->
-<!--<div ng-model="model.newFunctionSpec.body" style="height: 600px; width:600px" ui-ace="{-->
-<!--useWrapMode : true,-->
-<!--theme:'eclipse',-->
-<!--mode: 'python',-->
-<!--}"></div>-->
-<!--</div>-->
-
-<!--<div class="form-group">-->
-<!--<button class="btn btn-default" ng-click="ctrl.createFunction()">Create Function</button>-->
-<!--</div>-->
-<!--</div>-->
-<!--</div>-->
-<!--</div>-->
-
 <div class="container" ng-controller="CreateFunctionInputController as ctrl">
     <div class="row">
         <div class="col-xs-12">
             <div class="form-group">
                 <label class="control-label" for="nodepool-name" translate>NodePool Name</label>
                 <select name="nodepool-name" id="nodepool-name" ng-model="model.newFunctionSpec.nodepool_id"
-                        class="form-control" ng-options="mu as mu.label for mu in ctrl.nodepools">
+                        class="form-control" ng-options="mu.unit as mu.label for mu in ctrl.nodepools">
                     <option value="">Select NodePool</option>
                 </select>
             </div>
